fix some code inspection hints